# django-react

./: .dockerignore  .editorconfig  .env.local  .env.sample  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  backend.Dockerfile  build.sh  compose.nginx.yaml  compose.yaml  django-react.code-workspace  frontend.Dockerfile  main.py  nginx.Dockerfile  nginx.conf  package.json  pyproject.toml  pyvenv.cfg  required.txt  requirements.txt  sample.env  vercel.json  webpack.config.js
.github/: dependabot.yaml
.github/workflows/: django.yml  node.js.yaml
backend/: urls.py
backend/settings/: __init__.py  base.py  developement.py  production.py
commands/: run.sh
frontend/: package.json  vite.config.ts
frontend/src/: constants.ts
src/: App.tsx  pyproject.toml  requirements-dev.txt  requirements.txt
src/api/views/: __init__.py
src/api/views/api/: views.py
src/api/views/pages/: views.py
src/backend/: __init__.py  asgi.py  db.py  email.py  env.py  https.py  urls.py  wsgi.py
src/backend/settings/: __init__.py  base.py  dev.py  production.py
src/commands/: docker-entrypoint.sh  export.sh  format.sh  run-prod.sh
src/templates/: about.html  base.html
src/templates/react/: css.html  index.html  js.html
src/ui/: .prettierignore  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/ui/src/: main.tsx
src/ui/src/css/: index-page.css
src/ui/src/views/: AboutPage.tsx  IndexPage.tsx
templates/: base.html  react.html
web/: db.sqlite3
web/backend/: __init__.py  asgi.py  urls.py
web/templates/: base.html
(+7 files in other folders)
