[tool.poetry]
name = "django-react-template"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0"
django-brotli = "0.2.0"
django-cors-headers = "3.10.1"
django-debreach = "2.0.1"
djangorestframework = "3.13.1"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.0.0"
dj-database-url = "0.5.0"
uvicorn = "^0.17.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
